--- a/css/_features.scss
+++ b/css/_features.scss
@@ -98,7 +98,7 @@
 }
 
 .features-wrapper {
-  width: 100%;
+  //width: 100%;
   padding: 60px 0 60px;
   background-color: transparent;
   background-image: url(/assets/img/footer-lines.svg);
